--- a/website/src/components/Features/styles.module.css
+++ b/website/src/components/Features/styles.module.css
@@ -4,63 +4,6 @@
  * and scoped locally.
  */
 
-.splitContainer {
-  height: 450vh;
-  width: 100%;
-  display: block;
-}
-
-.leftSplit,
-.rightSplit {
-  padding-left: var(--ifm-spacing-horizontal);
-  padding-right: var(--ifm-spacing-horizontal);
-}
-
-.leftSplit {
-  height: 100vh;
-  width: 50%;
-  float: left;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #1B1E59;
-  color: #fff;
-  /* padding: ; */
-}
-
-.featureSticky {
-  position: sticky;
-  top: 0;
-}
-
-.stickyContent {
-  max-width: calc(var(--ifm-container-width)/3);
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.rightSplit {
-  float: right;
-  width: 50%;
-  /* background-image: linear-gradient(150deg, #686BA6, #1B1E59) */
-  background-image: linear-gradient(150deg, #e535ab, #1B1E59)
-}
-
-.splitRow {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: calc(var(--ifm-container-width)/3);
-  margin-left: auto;
-  margin-right: auto;
-  color: #fff;
-}
-
-.splitRow.before,
-.splitRow.after {
-  height: 75vh;
-}
 
 @media screen and (max-width: 966px) {
   .splitContainer {
@@ -82,22 +25,15 @@
 
 }
 
-.circle {
+/* .circle {
   width: 250px;
   height: 250px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* color: '#fff'; */
   background: #f2f2f2;
-  /* border: #2a2a2a 1px solid; */
-  /* box-shadow: 
-    0 1px 2px -2px rgba(0, 0, 0, 0.16), 
-    0 1px 2px -2px rgba(0, 0, 0, 0.16), 
-    0 3px 6px 0 rgba(0, 0, 0, 0.12), 
-    0 5px 12px 4px rgba(0, 0, 0, 0.09); */
-}
+} */
 
 .featureImage {
   height: 200px;
